--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "homepages/mixins";
 @import "homepages/navbar";
 @import "homepages/banner";
+@import "homepages/welcome";
 @import "homepages/base";
 @import "homepages/buttons";
 @import "homepages/layanan";
