--- a/scss/homepages/_footer.scss
+++ b/scss/homepages/_footer.scss
@@ -9,23 +9,30 @@ footer {
     grid-gap: 1.5rem;
     height: 100%;
     background-color: #343a40;
+    background: linear-gradient(to top, rgba(86, 180, 211,0.75), rgba(5, 150, 105, 1));
     margin: 0;
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+    .description {
+        @include text-xl;
+        font-weight: 500;
+        letter-spacing: 0.025em;
+        color: $coolGray-800;
+        text-align: center;
+        padding-bottom: 1.75rem;
+    }
+    .description2 {
+        @include text-lg;
+        letter-spacing: 0.025em;
+        color: $coolGray-700;
+        text-align: center;
+    }
     .footer-contact {
         margin: 1rem 0;
         .link {
             // text-decoration: none;
             color: $coolGray-300 !important;
         }
-    }
-    .menu-bawah {
-        display: flex;
-        flex-direction: column;
-    }
-    .peta {
-        width: 100%;
-        overflow: hidden;
     }
 }
 .copyright {
