--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 
-@import "homepages/variables";
+@import "variables";
 @import "homepages/mixins";
 @import "homepages/navbar";
 @import "homepages/banner";
