--- a/scss/homepages/_banner.scss
+++ b/scss/homepages/_banner.scss
@@ -22,8 +22,12 @@
     .banner-items {
         padding-top: 9rem;
         padding-bottom: 6rem;
-        padding-left: 9rem;
-        padding-right: 9rem;
+        @include for-tablet-landscape-up {    
+            padding-left: 9rem;
+            padding-right: 9rem;
+        }
+        padding-left: 3rem;
+        padding-right: 3rem;
         align-items: center;
         text-align: center;
         display: grid;
