--- a/scss/homepages/_keunggulan.scss
+++ b/scss/homepages/_keunggulan.scss
@@ -1,15 +1,25 @@
 .keunggulan {
     display: flex;
+    @include for-tablet-landscape-up {    
+        flex-direction: row;
+    }
+    flex-direction: column;
     flex: 1 1 0%;
     width: 100%;
     // padding-top: 3rem;
-    padding-left: 3rem;
+    @include for-tablet-landscape-up {
+        margin-left: 3rem;
+    }
+    padding-left: 0.5rem;
     // padding-right: 3rem;
     .keunggulan-left {
         @include for-tablet-landscape-up {
             display: flex;
         }
-        width: 35rem;
+        @include for-tablet-landscape-up {
+            width: 35rem;
+        }
+        width: 100%;
         background-color: $coolGray-50;
         overflow: hidden;
         .unggulan-img {
@@ -21,8 +31,9 @@
         }
     }
     .keunggulan-right {
+        display: flex;
         @include for-tablet-landscape-up {
-            display: flex;
+            flex-direction: row;
         }
         flex-direction: column;
         .title {
@@ -52,14 +63,18 @@
 
 .keunggulan-reverse {
     display: flex;
+    @include for-tablet-landscape-up {    
+        flex-direction: row-reverse;
+    }
     flex: 1 1 0%;
     width: 100%;
-    flex-direction: row-reverse;
+    flex-direction: column;
     .keunggulan-left {
+        display: flex;
         @include for-tablet-landscape-up {
-            display: flex;
+            width: 35rem;
         }
-        width: 35rem;
+        width: 100%;
         background-color: $coolGray-50;
         overflow: hidden;
         .unggulan-img {
