--- a/scss/homepages/_layanan.scss
+++ b/scss/homepages/_layanan.scss
@@ -89,3 +89,8 @@
         color: $coolGray-50 !important;
     }
 }
+
+.service-with-padding {
+    padding-left: 12rem;
+    padding-right: 12rem;
+}
