--- a/css/styles.css
+++ b/css/styles.css
@@ -934,21 +934,22 @@ label {
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     color: #f9fafb !important; }
 
+.service-with-padding {
+  padding-left: 12rem;
+  padding-right: 12rem; }
+
 .fitur {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2rem;
+  grid-gap: 6rem;
   background-color: green;
   margin: 0;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  padding-right: 3rem;
-  padding-left: 3rem;
+  padding: 6rem;
   background-color: rgba(16, 183, 127, 0.9);
   bottom: auto; }
   @media (min-width: 900px) {
     .fitur {
-      grid-template-columns: repeat(4, 1fr); } }
+      grid-template-columns: repeat(2, 1fr); } }
   .fitur .box-fitur {
     background-color: #f9fafb;
     border-radius: 0.25rem;
