--- a/scss/homepages/_layanan.scss
+++ b/scss/homepages/_layanan.scss
@@ -91,6 +91,10 @@
 }
 
 .service-with-padding {
-    padding-left: 12rem;
-    padding-right: 12rem;
+    @include for-tablet-landscape-up {
+        padding-left: 12rem;
+        padding-right: 12rem;
+    }
+    padding-left: 0rem;
+    padding-right: 0rem;
 }
