--- a/scss/homepages/_fitur.scss
+++ b/scss/homepages/_fitur.scss
@@ -7,7 +7,10 @@
     grid-gap: 6rem;
     background-color: green;
     margin: 0;
-    padding: 6rem;
+    @include for-tablet-landscape-up {  
+        padding: 6rem;
+    }
+    padding: 2rem;
     background-color: rgba(16, 183, 127, 0.9);
     bottom: auto;
     .box-fitur {
