--- a/scss/homepages/_product.scss
+++ b/scss/homepages/_product.scss
@@ -1,22 +1,18 @@
 .product {
     display: grid;
-    padding: 4rem;
+    // padding: 4rem;
     @include for-tablet-landscape-up {    
         grid-template-columns: repeat(4, 1fr);
     }
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    background-color: #f9fafb;
+    background-color: transparent;
     margin: 0;
     .product-box {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
         @include for-tablet-landscape-up {    
             margin-bottom: 0.5rem;
-        }
-        @include max-table-down {    
-            box-shadow: $shadow-md;
-        }
+        }    
+        box-shadow: $shadow-sm;
         margin-bottom: 3rem;
         height: 15rem;
         justify-content: center;
@@ -31,6 +27,7 @@
             padding-top: 1.5rem;
             padding-bottom: 1.5rem;
             color: $coolGray-50;
+            width: 100%;
             background-color: RGBA(107,114,128,0.5);
         }
     }
